[sveta] root to leaf paths